src/ts/tests/fixtures/invalid_modifiers/attribute.cloesce.ts
// @ts-nocheck
// InvalidPropertyModifier

@Model()
export class Foo {
  private id: number;
}
